make it more descriptive "Use the updated feature of Java List.of() by replacing old Arrays.asList().that's make more readiable and efficent.