@@ -8,7 +8,6 @@ import java.io.OutputStream;
 import java.net.Authenticator;
 import java.net.HttpURLConnection;
 import java.net.PasswordAuthentication;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -83,9 +82,9 @@ public class HttpURLConnectionClient extends HttpClient {
   static HttpHeaders getHeaders(StripeRequest request) {
     Map<String, List<String>> userAgentHeadersMap = new HashMap<>();
 
-    userAgentHeadersMap.put("User-Agent", Arrays.asList(buildUserAgentString()));
+    userAgentHeadersMap.put("User-Agent", List.of(buildUserAgentString()));
     userAgentHeadersMap.put(
-        "X-Stripe-Client-User-Agent", Arrays.asList(buildXStripeClientUserAgentString()));
+        "X-Stripe-Client-User-Agent", List.of(buildXStripeClientUserAgentString()));
 
     return request.headers().withAdditionalHeaders(userAgentHeadersMap);
   }
