@@ -20,7 +20,6 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -594,10 +593,10 @@ public class BaseStripeTest {
     }
 
     if (thisValue instanceof Object[]) {
-      thisValue = Arrays.asList((Object[]) thisValue);
+      thisValue = List.of((Object[]) thisValue);
     }
     if (otherValue instanceof Object[]) {
-      otherValue = Arrays.asList((Object[]) otherValue);
+      otherValue = List.of((Object[]) otherValue);
     }
 
     if (thisValue instanceof List<?> && otherValue instanceof List<?>) {
