@@ -7,7 +7,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.google.gson.annotations.SerializedName;
 import com.stripe.param.common.EmptyParam;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -165,14 +164,14 @@ public class ApiRequestParamsConverterTest {
   public void testHasListExtraParams() {
     ModelHasListExtraParams params = new ModelHasListExtraParams();
     params.paramFooList =
-        Arrays.asList(
+        List.of(
             new ModelHasExtraParams(ParamCode.ENUM_FOO),
             new ModelHasExtraParams(ParamCode.ENUM_BAR));
 
     Map<String, Object> expected = new HashMap<>();
     expected.put(
         "param_foo_list",
-        Arrays.asList(
+        List.of(
             ModelHasExtraParams.expectedParams("enum_foo"),
             ModelHasExtraParams.expectedParams("enum_bar")));
     assertEquals(expected, toMap(params));
